sql/test/error/error4.exp


select * from t1 inner join t2;
       ^
       |
        ----- ERROR
Error: line 8, characters 8-8:
Expected ON after JOIN
